objects/Team_Member_360Views__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>team member roles which needs to be shown on the 360 views of account and opportunity</description>
    <fields>
        <fullName>Account_Record_Types__c</fullName>
        <description>Enter account record type developer names comma Separated like Group_Account,Group_Prospect_Account</description>
        <inlineHelpText>Enter account record type developer names comma Separated like Group_Account,Group_Prospect_Account</inlineHelpText>
        <label>Account Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <description>Enter opportunity record type developer  names comma Separated like New_Sale,Renewal</description>
        <inlineHelpText>Enter opportunity record type developer names comma Separated like New_Sale,Renewal</inlineHelpText>
        <label>Opportunity Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Role_Name__c</fullName>
        <label>Team Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Team_Member_360Views</label>
</CustomObject>